--- a/layouts/partials/hook_head_end.html
+++ b/layouts/partials/hook_head_end.html
@@ -1,1 +1,5 @@
-{{ partial "math.html" . }}
+{{- partial "math.html" . -}}
+{{- range .Site.Params.myown_css }}
+  <link rel="stylesheet" href="{{ . | absURL }}">
+{{ end -}}
+
