--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,24 +1,38 @@
 <aside class="sidebar">
-  <div class="container sidebar-sticky">
+  <div class="container sidebar-sticky-top">
     <div class="sidebar-about">
       <a href="{{ .Site.BaseURL }}"><h1>{{ .Site.Title }}</h1></a>
+    </div>    
+    <nav>
+      <ul class="sidebar-nav">
+        {{- $site := .Site -}}
+        {{ range .Site.Menus.nav }}
+        <li><a href=" {{ .URL }}">{{ .Name }}</a></li>
+        {{- if isset $site.Taxonomies .Identifier -}}
+        {{- $idx := index $site.Taxonomies .Identifier }}
+        <ul>
+          {{- $cat := index $site.Taxonomies .Identifier -}}
+          {{- $id := .Identifier -}}
+          {{ range $term, $value :=  $cat }}
+          <li><a href="/{{$id}}/{{$term}}">{{$term}}</a></li>
+          {{- end }}
+        </ul>
+        {{- end -}}
+        {{ end }}
+      </ul>
+      <ul class="sidebar-nav">
+        <li><a href="{{ .Site.BaseURL }}">Home</a></li>
+        {{- range .Site.Menus.main -}}
+        <li><a href="{{.URL}}">{{ .Name }}</a></li>
+        {{- end }}
+      </ul>
+    </nav>    
+  </div>
+  <div class="container sidebar-sticky-bottom">
+    <div class="sidebar-about">
       <p class="lead">
       {{ .Site.Params.description }} {{ .Site.Params.author.name }} <{{ .Site.Params.author.email }}>
       </p>
-      <ul id="nav">
-        {{ range .Site.Menus.nav }}
-        <li><a href=" {{ .URL }}">{{ .Name }}</a></li>
-        {{ end }}
-      </ul>
     </div>
-
-    <nav>
-      <ul class="sidebar-nav">
-        <li><a href="{{ .Site.BaseURL }}">Home</a> </li>
-        {{ range .Site.Menus.main -}}
-          <li><a href="{{.URL}}"> {{ .Name }} </a></li>
-        {{- end }}
-      </ul>
-    </nav>
   </div>
 </aside>
