--- a/static/css/myown.css
+++ b/static/css/myown.css
@@ -1,12 +1,21 @@
 .sidebar {
+    background-color: #6F4E37;
+    /* background-image: url("/images/cafe-musain.jpg"); */
     margin-left: auto;
     margin-right: auto;
     height: 100%;
-    background-color: #323232;
+}
+
+.sidebar-id {
+    list-style: disc;
 }
 
 .sidebar-about {
-    padding-bottom: 50px;
+    margin-bottom: 60px
+}
+
+ul.sidebar-id li {
+    margin-top: 5px;
 }
 
 @media (min-width: 48em) {
