--- a/layouts/partials/hook_head_end.html
+++ b/layouts/partials/hook_head_end.html
@@ -2,3 +2,4 @@
 {{- range .Site.Params.myown_css }}
   <link rel="stylesheet" href="{{ . | absURL }}">
 {{ end -}}
+<script src="{{ .Site.BaseURL }}/scripts/responsive-nav.js"></script>
