table without border

--- a/static/css/myown.css
+++ b/static/css/myown.css
@@ -57,14 +57,10 @@ ul.sidebar-id li {
 table.posts {
   margin-bottom: 1rem;
   width: 100%;
-  border: 0pgx;
+  border: none;
   border-collapse: collapse;
-  td,
-  th {
-      padding: .25rem .5rem;
-      border: 0px;
-  }
   tbody tr td {
+      border: none;
       background-color: #fff;
   }
 }
@@ -79,8 +75,6 @@ table.posts {
     top: 1rem;
     left:   1rem;
 }
-
-
 
 .sidebar-sticky-bottom {
     position: absolute;
